--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>ProjectWeb</artifactId>
   <packaging>war</packaging>
   <version>68.0</version>
-  <name>Rakhi</name>
+  <name>Sample Project</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
